[tool.poetry]
name = "nebula"
version = "6.0.8"
description = "Open source broadcast automation system"
authors = ["Nebula Broadcast <info@nebulabroadcast.com>"]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

#
# Dependencies
#

[tool.poetry.dependencies]
python = "^3.12"
aiofiles = "^24.1.0"
asyncpg = "^0.29.0"
email-validator = "^2.1.1"
fastapi = "^0.115.0"
geoip2 = "^4.8.0"
granian = "^1.6.0"
gunicorn = "^22.0.0"
httpx = "^0.27.2"
mistune = "^3.0.1"
nxtools = "^1.6"
pydantic = "^2.9.2"
python-dotenv = "^1.0.1"
redis = "^5.1.0"
requests = "^2.32.3"
rich = "^13.8.0"
shortuuid = "^1.0.12"
user-agents = "^2.2.0"
uvicorn = { extras = ["standard"], version = "0.31.0" }

[tool.poetry.group.dev.dependencies]
asyncpg-stubs = "^0.29.1"
mypy = "^1.11"
pytest = "^8.0"
pytest-asyncio = "^0.20.3"
ruff = "^0.6.8"
types-aiofiles = "^23.2.0.20240311"
types-requests = "^2.31.0.20240311"

#
# Tools
#

[tool.ruff]
line-length = 88

[tool.ruff.format]
indent-style = "space"
line-ending = "auto"
skip-magic-trailing-comma = false
docstring-code-format = true

[tool.ruff.lint]
select = [
    "E",     # pycodestyle errors
    "W",     # pycodestyle warnings
    "F",     # pyflakes
    "I",     # isort
    "C4",    # flake8-comprehensions
    "B",     # flake8-bugbear
    "ISC",   # flake8-implicit-str-concat
    "C4",    # flake8-comprehensions
    "UP",    # pyupgrade
    "ASYNC", # flake8-async
    "SIM",   # flake8-simplify
    "ISC",   # flake8-implicit-str-concat
    # "ANN",   # flake8-annotations
    # "N",     # pep8-naming
    # "D",     # pydocstyle
    # "S",     # flake8-bandit
]

ignore = [
    "ISC001",
    "B008",     # do not perform function calls in argument defaults
    "C901",     # too complex. C'mon - this is a complex project
    "ANN101",   # missing type annotation for self
    "ANN102",   # missing type annotation for cls
    "ASYNC110", # let us sleep
]

[tool.mypy]
plugins = ["pydantic.mypy"]

#follow_imports = "silent"
#strict = true
warn_redundant_casts = true
warn_unused_ignores = true
disallow_any_generics = true
check_untyped_defs = true
disallow_untyped_defs = true
no_implicit_reexport = true
explicit_package_bases = true
strict_optional = true
exclude = "tests/|venv/"

[[tool.mypy.overrides]]
module = ["nxtools", "user_agents", "tomllib"]
ignore_errors = true
follow_imports = "skip"
ignore_missing_imports = true
